--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     <footer class="container">
         <hr>
-        <p>&copy; 2024 Практика "Доктор Стафий". {{ site.author.address }}</p>
+        <p>&copy; 2025 "Доктор Стафий". {{ site.author.address }}</p>
         <p>Email: {{ site.email }} | Instagram: <a href="https://instagram.com/{{ site.author.instagram }}">@{{ site.author.instagram }}</a></p>
     </footer>
 </body>
