--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,30 @@
 
     <main>{{ content }}</main>
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Physician",
+  "name": "Доктор Стафий Диана Викторовна",
+  "image": "https://gosubv.github.io/doctorstafij/assets/img/logo.jpg",
+  "medicalSpecialty": ["Endocrinology", "Nutritionist"],
+  "telephone": "+77152000000",
+  "email": "doctor.stafij@gmail.com",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "ул. Ауэзова 133",
+    "addressLocality": "Петропавловск",
+    "addressRegion": "Северо-Казахстанская область",
+    "addressCountry": "KZ"
+  },
+  "openingHours": "Mo-Fr 09:00-18:00",
+  "url": "https://gosubv.github.io/doctorstafij/",
+  "sameAs": [
+    "https://www.instagram.com/dianastafiy/"
+  ]
+}
+</script>
+    
     <footer class="container">
         <hr>
         <p>&copy; 2025 "Доктор Стафий". {{ site.author.address }}</p>
