--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
             <ul class="nav-links">
                 <li><a href="#about">О враче</a></li>
                 <li><a href="#services">Услуги</a></li>
+                <li><a href="#blog">Блог</a></li>
                 <li><a href="#reviews">Отзывы</a></li>
                 <li><a href="#booking" class="btn-nav">Записаться</a></li>
                 <li>
