--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="container">
-            <a href="#hero" class="logo">Доктор Стафий</a>
+            <a href="#hero" class="logo"><img src="./images/logo.png" /></a>
             <ul class="nav-links">
                 <li><a href="#about">О враче</a></li>
                 <li><a href="#services">Услуги</a></li>
