--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
 
 <header class="main-header">
     <div class="container nav-container">
-        <a href="#hero" class="logo"><img src="./images/logo.png" style="widht: 50%; height: 50%;" /></a>
+        <a href="#hero" class="logo-link">
+            <img src="{{ '/images/logo.png' | relative_url }}" alt="Доктор Стафий" class="header-logo">
+        </a>
         
         <button class="menu-toggle" aria-label="Открыть меню">
             <span class="bar"></span>
